--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <!-- tailwind and daisy ui link -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- css custom styles -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+            'title-color': '#131318',
+            'description-p': '#13131899',
+          }
+        }
+      }
+    }
+  </script>
   <!-- Google font Manrope -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,10 +53,10 @@
             <li><a>Contact</a></li>
           </ul>
         </div>
-        <a class="text-4xl text-[#131318] font-extrabold">Hockey<samp class="text-red-500">’</samp>s</a>
+        <a class="text-4xl text-title-color font-extrabold">Hockey<samp class="text-red-500">’</samp>s</a>
       </div>
       <div class="navbar-center hidden lg:flex">
-        <ul class="menu menu-horizontal text-xl font-normal text-[#424247] px-1">
+        <ul class="menu menu-horizontal text-xl font-normal text-[#424247] px-10">
           <li><a><samp class="text-red-500">Home</samp></a></li>
           <li><a>About</a></li>
           <li><a>Pages</a></li>
@@ -50,17 +64,137 @@
           <li><a>Contact</a></li>
         </ul>
       </div>
-      <div class="navbar-end space-x-6">
+      <div class="navbar-end lg:space-x-6">
         <img class="text-black" src="./Images/Frame.svg" alt="">
-        <a class="btn bg-red-500 text-lg text-white px-7 rounded-lg ">Get Ticket</a>
+        <a class="btn bg-red-600 text-lg text-white px-7 rounded-lg ">Get Ticket</a>
       </div>
     </nav>
 
     <!-- banner section -->
-
+    <div class="carousel w-full mt-16">
+      <div id="slide1" class="carousel-item relative w-full">
+        <img src="./Images/1.png" class="w-full" />
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <a href="#slide2" class="btn btn-circle">❮</a>
+          <a href="#slide2" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+      <div id="slide2" class="carousel-item relative w-full">
+        <img src="./Images/1.png" class="w-full" />
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <a href="#slide1" class="btn btn-circle">❮</a>
+          <a href="#slide1" class="btn btn-circle">❯</a>
+        </div>
+      </div>
   </header>
-  <main>
 
+  <main class="container mx-auto">
+    <!-- Hockeys Club title -->
+    <section class="text-center mt-24">
+      <h1 class="text-4xl font-extrabold pb-6">Professional Hockeys Club</h1>
+      <p class="text-lg text-description-p font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+        turpis placerat <br>
+        dolor.
+        Purus urna in sit
+        nullam proin.</p>
+    </section>
+    <!-- progress section -->
+    <section class="mt-6">
+      <div class="grid text-center gap-8 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+        <!-- first Radial -->
+        <div>
+          <div class="radial-progress text-red-500 " style="--value:87;" role="progressbar">87%</div>
+          <h2 class="text-title-color font-semibold py-5">Prayer Facility</h2>
+          <p class="description-p">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+        </div>
+        <!-- second Radial -->
+        <div>
+          <div class="radial-progress text-green-500" style="--value:95;" role="progressbar">95%</div>
+          <h2 class="text-title-color font-semibold py-5">Experienced Coach</h2>
+          <p class="description-p">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+        </div>
+        <!-- third Radial -->
+        <div>
+          <div class="radial-progress text-yellow-500" style="--value:90;" role="progressbar">90%</div>
+          <h2 class="text-title-color font-semibold py-5">Senior Player</h2>
+          <p class="text-description-p">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+        </div>
+        <!-- fourth Radial -->
+        <div>
+          <div class="radial-progress text-blue-500" style="--value:80;" role="progressbar">80%</div>
+          <h2 class="text-title-color font-semibold py-5">Training Ground</h2>
+          <p class="text-description-p ">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+        </div>
+      </div>
+    </section>
+    <!-- Program Sections -->
+    <section class="text-center mt-24">
+      <h2 class="text-4xl text-title-color font-extrabold pb-6">Program Sections</h2>
+      <p class="text-lg text-description-p font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+        turpis
+        placerat <br> dolor. Purus urna in sit
+        nullam proin.</p>
+
+      <!-- Program images container -->
+      <div class="grid gap-6 sm:grid-cols-1 lg:grid-cols-2 mt-20">
+        <!-- first-images -->
+        <div class="hero h-[338px] rounded-2xl" style="background-image: url(./Images/2.png);">
+          <div class="hero-content text-left text-neutral-left">
+            <div class="card-body">
+              <h2 class="card-title text-3xl text-white font-extrabold pb-4">Junior Program</h2>
+              <p class="text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
+                enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed
+                et in.
+              </p>
+              <div class="card-actions pt-6 ">
+                <button class=" bg-red-600 text-white px-5 py-3 rounded-lg">Register Now!</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- second-images -->
+        <div class="hero h-[338px] rounded-2xl" style="background-image: url(./Images/3.png);">
+          <div class="hero-content text-center text-neutral-left">
+            <div class="card-body ">
+              <h2 class="card-title text-3xl text-white font-extrabold pb-4">Junior Program</h2>
+              <p class="text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
+                enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed
+                et in.
+              </p>
+              <div class="card-actions pt-6 ">
+                <button class=" bg-red-600 text-white px-5 py-3 rounded-lg">Register Now!</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- third-images -->
+      <div class="grid lg:grid-cols-1 mt-6">
+        <div class="hero h-[450px] w-[] rounded-2xl" style="background-image: url(./Images/4.png);">
+          <div class="hero-content text-center text-neutral-left">
+            <div class="card-body ">
+              <h2 class="card-title text-3xl font-extrabold pb-4">Junior Program</h2>
+              <p class="text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
+                enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed
+                et in.
+              </p>
+              <div class="card-actions pt-6 ">
+                <button class=" bg-red-600 text-white px-5 py-3 rounded-lg">Register Now!</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Our New Products section -->
+
+    <section class="text-center mt-24">
+      <h1 class="text-title-color text-4xl font-extrabold pb-5">Our New Products</h1>
+      <p class="text-lg text-description-p font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+        turpis placerat dolor. Purus urna in sit nullam
+        proin.</p>
+    </section>
   </main>
   <footer>
 
