added the footer section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             clifford: '#da373d',
             'title-color': '#131318',
             'description-p': '#13131899',
+            'footer-font': '#ffffff99',
           }
         }
       }
@@ -189,16 +190,312 @@
 
     <!-- Our New Products section -->
 
-    <section class="text-center mt-24">
+    <section class="text-center  mt-24">
       <h1 class="text-title-color text-4xl font-extrabold pb-5">Our New Products</h1>
       <p class="text-lg text-description-p font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
         turpis placerat dolor. Purus urna in sit nullam
         proin.</p>
+      <div class="grid  grid-cols-1 md:grid-row-2 lg:grid-cols-2">
+        <!-- first card products -->
+        <div class="card card-side  mt-24 sm:space-y-reverse-1">
+          <figure><img class="rounded-xl p-6" src="./Images/5.png" alt="Movie" /></figure>
+          <div class="text-left pl-5">
+            <div class="flex pb-4">
+              <img src="./Images/star.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">5.0</h4>
+              <img src="./Images/eisy.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">20</h4>
+              <img src="./Images/love.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">200</h4>
+            </div>
+            <div class="pb-4">
+              <h3 class="text-title-color text-2xl pb-2">World Cup Flags Football</h3>
+              <p class="text-lg text-description-p font-medium">Dolor sit amet consectetur. Ut urna diam <br> quis
+                sagittis.
+              </p>
+            </div>
+            <div class="flex ">
+              <p class="text-xl text-red-600 font-extrabold pr-5">Price - $22.00</p>
+              <img src="./Images/shoping.svg" alt="">
+              <p class="text-lg text-description-p font-medium pl-2">Delivery Fee : Free</p>
+            </div>
+          </div>
+        </div>
+        <!-- second card products -->
+        <div class="card card-side  mt-24">
+          <figure><img class="rounded-xl p-6" src="./Images/6.png" alt="Movie" /></figure>
+          <div class="text-left pl-5">
+            <div class="flex pb-4">
+              <img src="./Images/star.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">5.0</h4>
+              <img src="./Images/eisy.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">20</h4>
+              <img src="./Images/love.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">200</h4>
+            </div>
+            <div class="pb-4">
+              <h3 class="text-title-color text-2xl pb-2">World Cup Flags Football</h3>
+              <p class="text-lg text-description-p font-medium">Dolor sit amet consectetur. Ut urna diam <br> quis
+                sagittis.
+              </p>
+            </div>
+            <div class="flex ">
+              <p class="text-xl text-red-600 font-extrabold pr-5">Price - $22.00</p>
+              <img src="./Images/shoping.svg" alt="">
+              <p class="text-lg text-description-p font-medium pl-2">Delivery Fee : Free</p>
+            </div>
+          </div>
+        </div>
+        <!-- third card products -->
+        <div class="card card-side mt-24">
+          <figure><img class="rounded-xl p-6" src="./Images/7.png" alt="Movie" /></figure>
+          <div class="text-left pl-5">
+            <div class="flex pb-4">
+              <img src="./Images/star.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">5.0</h4>
+              <img src="./Images/eisy.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">20</h4>
+              <img src="./Images/love.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">200</h4>
+            </div>
+            <div class="pb-4">
+              <h3 class="text-title-color text-2xl pb-2">Cap For Hockeys</h3>
+              <p class="text-lg text-description-p font-medium">Dolor sit amet consectetur. Ut urna diam <br> quis
+                sagittis.
+              </p>
+            </div>
+            <div class="flex ">
+              <p class="text-xl text-red-600 font-extrabold pr-5">Price - $22.00</p>
+              <img src="./Images/shoping.svg" alt="">
+              <p class="text-lg text-description-p font-medium pl-2">Delivery Fee : Free</p>
+            </div>
+          </div>
+        </div>
+        <!-- fourth card products -->
+        <div class="card card-side  mt-24">
+          <figure><img class="rounded-xl p-6" src="./Images/8.png" alt="Movie" /></figure>
+          <div class="text-left pl-5">
+            <div class="flex pb-4">
+              <img src="./Images/star.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">5.0</h4>
+              <img src="./Images/eisy.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">20</h4>
+              <img src="./Images/love.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">200</h4>
+            </div>
+            <div class="pb-4">
+              <h3 class="text-title-color text-2xl pb-2">World Cup Flags Football</h3>
+              <p class="text-lg text-description-p font-medium">Dolor sit amet consectetur. Ut urna diam <br> quis
+                sagittis.
+              </p>
+            </div>
+            <div class="flex ">
+              <p class="text-xl text-red-600 font-extrabold pr-5">Price - $22.00</p>
+              <img src="./Images/shoping.svg" alt="">
+              <p class="text-lg text-description-p font-medium pl-2">Delivery Fee : Free</p>
+            </div>
+          </div>
+        </div>
+        <!-- five card products -->
+        <div class="card card-side mt-24">
+          <figure><img class="rounded-xl p-6" src="./Images/9.png" alt="Movie" /></figure>
+          <div class="text-left pl-5">
+            <div class="flex pb-4">
+              <img src="./Images/star.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">5.0</h4>
+              <img src="./Images/eisy.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">20</h4>
+              <img src="./Images/love.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">200</h4>
+            </div>
+            <div class="pb-4">
+              <h3 class="text-title-color text-2xl pb-2">World Cup Flags Football</h3>
+              <p class="text-lg text-description-p font-medium">Dolor sit amet consectetur. Ut urna diam <br> quis
+                sagittis.
+              </p>
+            </div>
+            <div class="flex ">
+              <p class="text-xl text-red-600 font-extrabold pr-5">Price - $22.00</p>
+              <img src="./Images/shoping.svg" alt="">
+              <p class="text-lg text-description-p font-medium pl-2">Delivery Fee : Free</p>
+            </div>
+          </div>
+        </div>
+        <!-- six card products -->
+        <div class="card card-side  mt-24">
+          <figure><img class="rounded-xl p-6" src="./Images/10.png" alt="Movie" /></figure>
+          <div class="text-left pl-5">
+            <div class="flex pb-4">
+              <img src="./Images/star.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">5.0</h4>
+              <img src="./Images/eisy.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">20</h4>
+              <img src="./Images/love.png" alt="">
+              <h4 class="text-lg text-description-p font-medium pr-5">200</h4>
+            </div>
+            <div class="pb-4">
+              <h3 class="text-title-color text-2xl pb-2">World Cup Flags Football</h3>
+              <p class="text-lg text-description-p font-medium">Dolor sit amet consectetur. Ut urna diam <br> quis
+                sagittis.
+              </p>
+            </div>
+            <div class="flex ">
+              <p class="text-xl text-red-600 font-extrabold pr-5">Price - $22.00</p>
+              <img src="./Images/shoping.svg" alt="">
+              <p class="text-lg text-description-p font-medium pl-2">Delivery Fee : Free</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- Clients Question section -->
+
+    <section class="text-center lg:mt-28">
+      <h2 class="text-4xl text-title-color font-extrabold pb-6">Clients Question</h2>
+      <p class="text-lg text-description-p font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+        turpis
+        placerat dolor. </p>
+      <div class="mt-20">
+        <div class="flex sm:flex-row-1">
+          <div class="p-10">
+            <img src="./Images/11.png" alt="">
+          </div>
+          <div class="text-left pt-2">
+            <!-- question one -->
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-5" checked="checked" />
+              <div class="collapse-title text-2xl text-title-color font-bold">
+                1. Question: How much will your services cost?
+              </div>
+              <div class="collapse-content">
+                <p class="text-lg text-description-p font-medium">Our pricing depends on the scope of the project. We
+                  offer competitive rates and can provide you with
+                  detailed quote.</p>
+              </div>
+            </div>
+            <!-- question two -->
+            <div class="collapse collapse-plus">
+              <input type="radio" name="my-accordion-5" />
+              <div class="collapse-title text-2xl text-title-color font-bold">
+                2. Question: What sets your company apart from others in the industry?
+              </div>
+              <div class="collapse-content">
+                <p class="text-lg text-description-p font-medium">We take pride in our commitment to quality, customer
+                  satisfaction, and innovation. </p>
+              </div>
+            </div>
+            <!-- question three -->
+            <div class="collapse collapse-plus">
+              <input type="radio" name="my-accordion-5" />
+              <div class="collapse-title text-2xl text-title-color font-bold">
+                3. Question: How long will it take to complete the project?
+              </div>
+              <div class="collapse-content">
+                <p class="text-lg text-description-p font-medium">Project timelines vary based on the complexity and
+                  size. We'll work closely with you to establish a
+                  realistic timeline
+                  during the project planning phase. </p>
+              </div>
+            </div>
+            <!-- question four -->
+            <div class="collapse collapse-plus">
+              <input type="radio" name="my-accordion-5" />
+              <div class="collapse-title text-2xl text-title-color font-bold">
+                4. Question: Can you provide references from past clients?
+              </div>
+              <div class="collapse-content">
+                <p class="text-lg text-description-p font-medium">We have a list of satisfied clients who can vouch for
+                  our services.</p>
+              </div>
+            </div>
+            <!-- question five -->
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-5" />
+              <div class="collapse-title text-2xl text-title-color font-bold">
+                5. Question: How do you handle unexpected challenges or changes during a project?
+              </div>
+              <div class="collapse-content">
+                <p class="text-lg text-description-p font-medium">Flexibility is key in our approach. We understand that
+                  unforeseen challenges may arise, and we have a
+                  robust project
+                  management process in place to adapt to changes.</p>
+              </div>
+            </div>
+            <!-- question six -->
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-5" />
+              <div class="collapse-title text-2xl text-title-color font-bold">
+                6. Question: How long will it take to complete the project?
+              </div>
+              <div class="collapse-content">
+                <p class="text-lg text-description-p font-medium">Project timelines vary based on the complexity and
+                  size. We'll work closely with you to establish a
+                  realistic timeline
+                  during the project planning phase.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Get In Touch section -->
+
+    <section class="text-center lg:mt-32">
+      <h1 class="text-4xl text-title-color font-extrabold pb-6">Get <samp class="text-red-500">In</samp> Touch</h1>
+      <p class="text-lg text-description-p font-medium">If you're asking about how to get in touch with someone or a
+        business, the method can vary <br> depending on the
+        context.
+        Here's a general response..</p>
     </section>
   </main>
-  <footer>
-
+  <!-- footer section -->
+  <footer class="mt-24">
+    <section class="footer p-10 bg-title-color text-base-content">
+      <aside>
+        <h2 class="text-3xl text-[#FFF] pb-5">Get In Touch</h2>
+        <p class="text-lg text-footer-font font-medium pb-6">Dit amet consectetur. Condimentum <br>
+          adipiscing aliquam turpis placerat dolor. <br> Purus
+          urna in sit nullam proin.
+        </p>
+        <div class="space-y-4">
+          <div class="flex gap-4">
+            <img src="./Images/message.png" alt="">
+            <a class="link link-hover text-footer-font font-medium">mohammadshakilbd023@gmail.com</a>
+          </div>
+          <div class="flex gap-4">
+            <img src="./Images/call.png" alt="">
+            <h6 class="text-footer-font font-medium">(+880) 1602132***</h6>
+          </div>
+        </div>
+      </aside>
+      <nav class="">
+        <h4 class="text-xl text-[#FFF] pb-5">Company</h4>
+        <a class="link link-hover text-lg text-footer-font font-medium">Branding</a>
+        <a class="link link-hover text-lg text-footer-font font-medium">Design</a>
+        <a class="link link-hover text-lg text-footer-font font-medium">Marketing</a>
+        <a class="link link-hover text-lg text-footer-font font-medium">Advertisement</a>
+        <a class="link link-hover text-lg text-footer-font font-medium">Legal Notice</a>
+      </nav>
+      <nav class="">
+        <h4 class="text-xl text-[#FFF] pb-5">Support</h4>
+        <a class="link link-hover text-lg text-footer-font font-medium">About us</a>
+        <a class="link link-hover text-lg text-footer-font font-medium">Contact</a>
+        <a class="link link-hover text-lg text-footer-font font-medium">Jobs</a>
+        <a class="link link-hover text-lg text-footer-font font-medium">Press kit</a>
+      </nav>
+      <nav class="">
+        <h4 class="text-xl text-[#FFF] pb-5">Services</h4>
+        <a class="link link-hover text-lg text-footer-font font-medium">Terms of use</a>
+        <a class="link link-hover text-lg text-footer-font font-medium">Privacy policy</a>
+        <a class="link link-hover text-lg text-footer-font font-medium">Cookie policy</a>
+        <a class="link link-hover text-lg text-footer-font font-medium">Hockeys for kids</a>
+        <a class="link link-hover text-lg text-footer-font font-medium">Hockeys for Adult</a>
+      </nav>
+    </section>
   </footer>
+
 </body>
 
 </html>
