get intouch and social media done

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             'title-color': '#131318',
             'description-p': '#13131899',
             'footer-font': '#ffffff99',
+            'input-color': '#13131805',
           }
         }
       }
@@ -448,6 +449,74 @@
         business, the method can vary <br> depending on the
         context.
         Here's a general response..</p>
+      <!-- get in touch  -->
+      <div class="flex justify-between">
+        <!-- div-one -->
+        <div class="grid  sm:grid-cols-1 lg:grid-col-1 m-12 ">
+          <div class="bg-[#BCED6D1A] lg:w-80 h-[220px] rounded-2xl ">
+            <img class="pl-6 pt-7" src="./Images/Group 1171275317.png" alt="">
+            <p class="text-left pl-6 text-lg text-description-p font-normal ">
+              Phone Number : <br>
+              (+62) 123-321-543
+            </p>
+          </div>
+          <div class="bg-[#BCED6D1A] lg:w-80 h-[220px] rounded-2xl my-6">
+            <img class="pl-6 pt-7" src="./Images/Group 1171275318.png" alt="">
+            <p class="text-left pl-6 text-lg text-description-p font-normal">
+              Email : <br>
+              hockeys@support.com
+            </p>
+          </div>
+          <div class="bg-[#629CF31A] lg:w-80 h-[220px] rounded-2xl">
+            <img class="pl-6 pt-7" src="./Images/Group 1171275321.png" alt="">
+            <p class="text-left pl-6 text-lg text-description-p font-normal ">
+              Location : <br>
+              152/1 Mohakhali Wireless Gate
+            </p>
+          </div>
+        </div>
+        <!-- div two -->
+        <div class="mt-12">
+          <form class="grid lg:grid-cols-2">
+
+            <div class=" text-left">
+              <label class="text-xl text-title-color font-bold" for="">Your Name : <br></label>
+              <input type="text" placeholder="Your Full Name" class="w-80 h-16 pl-5 bg-input-color rounded-xl">
+            </div>
+            <div class=" mb-6 text-left">
+              <label class="text-xl text-title-color font-bold" for="">Your Email : <br></label>
+              <input type="email" placeholder="Your Email" class="w-80 h-16 pl-5 bg-input-color rounded-xl">
+            </div>
+            <!-- second input -->
+
+            <div class=" text-left">
+              <label class="text-xl text-title-color font-bold" for="">Subject: <br></label>
+              <input type="text" placeholder="Enter Your Subject" class="w-80 h-16 pl-5 bg-input-color rounded-xl">
+            </div>
+            <div class=" text-left">
+              <label class="text-xl text-title-color font-bold" for="">Phone Number: <br></label>
+              <input type="email" placeholder="Enter Your Phone Number"
+                class="w-80 h-16 pl-5 bg-input-color rounded-xl">
+            </div>
+          </form>
+          <div class=" text-left">
+            <label class="text-xl text-title-color font-bold mt-6">Message : <br></label>
+            <input type="message" placeholder="Write your message"
+              class="w-100% lg:w-[672px] h-100% lg:h-[370px] text-center bg-input-color rounded-xl">
+          </div>
+          <button class="text-xl text-white font-bold bg-red-600 w-[672px] rounded-xl py-4 mt-8">Send Message</button>
+        </div>
+      </div>
+      <!-- Social Media -->
+      <div class="sm:h-100% lg:h-[150px] bg-[#13131805] rounded-xl mt-16">
+        <h2 class="text-2xl text-title-color font-extrabold pb-6">Social Media</h2>
+        <div class="sm:center w-7 inline-flex space-x-6">
+          <img src="./Images/Facebook.png" alt="">
+          <img src="./Images/Instagram.png" alt="">
+          <img src="./Images/Linkedin.png" alt="">
+          <img src="./Images/Twitter.png" alt="">
+        </div>
+      </div>
     </section>
   </main>
   <!-- footer section -->
