responsiv question section

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         proin.</p>
       <div class="grid  grid-cols-1 md:grid-row-2 lg:grid-cols-2">
         <!-- first card products -->
-        <div class="card card-side  mt-24 sm:space-y-reverse-1">
+        <div class="card card-side  mt-24 ">
           <figure><img class="rounded-xl p-6" src="./Images/5.png" alt="Movie" /></figure>
           <div class="text-left pl-5">
             <div class="flex pb-4">
@@ -224,7 +224,7 @@
         </div>
         <!-- second card products -->
         <div class="card card-side  mt-24">
-          <figure><img class="rounded-xl p-6" src="./Images/6.png" alt="Movie" /></figure>
+          <figure><img class="rounded-xl p-6" src="./Images/6.png" alt="" /></figure>
           <div class="text-left pl-5">
             <div class="flex pb-4">
               <img src="./Images/star.png" alt="">
@@ -249,7 +249,7 @@
         </div>
         <!-- third card products -->
         <div class="card card-side mt-24">
-          <figure><img class="rounded-xl p-6" src="./Images/7.png" alt="Movie" /></figure>
+          <figure><img class="rounded-xl p-6" src="./Images/7.png" alt="" /></figure>
           <div class="text-left pl-5">
             <div class="flex pb-4">
               <img src="./Images/star.png" alt="">
@@ -359,7 +359,7 @@
         turpis
         placerat dolor. </p>
       <div class="mt-20">
-        <div class="flex sm:flex-row-1">
+        <div class="lg:flex sm:flex-row-1">
           <div class="p-10">
             <img src="./Images/11.png" alt="">
           </div>
@@ -443,14 +443,16 @@
     </section>
     <!-- Get In Touch section -->
 
-    <section class="text-center lg:mt-32">
+    <section class="text-center  lg:mt-32">
       <h1 class="text-4xl text-title-color font-extrabold pb-6">Get <samp class="text-red-500">In</samp> Touch</h1>
-      <p class="text-lg text-description-p font-medium">If you're asking about how to get in touch with someone or a
+      <p class="text-lg text-description-p font-medium sm:text-center">If you're asking about how to get in touch with
+        someone
+        or a
         business, the method can vary <br> depending on the
         context.
         Here's a general response..</p>
       <!-- get in touch  -->
-      <div class="flex justify-between">
+      <div class=" lg:flex justify-between ">
         <!-- div-one -->
         <div class="grid  sm:grid-cols-1 lg:grid-col-1 m-12 ">
           <div class="bg-[#BCED6D1A] lg:w-80 h-[220px] rounded-2xl ">
@@ -504,7 +506,8 @@
             <input type="message" placeholder="Write your message"
               class="w-100% lg:w-[672px] h-100% lg:h-[370px] text-center bg-input-color rounded-xl">
           </div>
-          <button class="text-xl text-white font-bold bg-red-600 w-[672px] rounded-xl py-4 mt-8">Send Message</button>
+          <button class="text-xl text-white font-bold bg-red-600 lg:w-[672px] rounded-xl py-4 mt-8">Send
+            Message</button>
         </div>
       </div>
       <!-- Social Media -->
